examples/test/testpolicy13489.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13489
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key8: value23
      key2: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value35
      podSelector:
        matchLabels:
          key0: value10
          key36: value19
